fix(ffe-message-box): use `break-all` to wrap words

--- a/packages/ffe-message-box/less/message-box.less
+++ b/packages/ffe-message-box/less/message-box.less
@@ -5,7 +5,7 @@
     .ffe-body-paragraph,
     .ffe-link-text,
     &__title {
-        word-break: break-word;
+        word-break: break-all;
         hyphens: auto;
     }
 
